--- a/proyecto2/css/estilos.css
+++ b/proyecto2/css/estilos.css
@@ -1,5 +1,20 @@
 body {
-    color: deepskyblue;
+    color: rgb(9, 93, 121);
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "arial";
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+#container {
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 2px solid rgb(180, 11, 11);
+    margin: 0 auto;
+}
+
+#container h1 {
+    font-size: 20px;
 }
