--- a/proyecto2/css/estilos.css
+++ b/proyecto2/css/estilos.css
@@ -1,4 +1,5 @@
 body {
+    background: #1e1f24;
     color: rgb(46, 196, 59);
     text-align: center;
     font-family: "arial";
@@ -16,6 +17,11 @@ body {
     padding: 0.5em;
 }
 
+#cabecera #logo {
+    width: 20px;
+    vertical-align: middle;
+}
+
 #cabecera #tagline {
     padding: 0 0 0 1em;
     font-weight: normal;
@@ -24,7 +30,7 @@ body {
 
 #container {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #ddd;
     margin: 0 auto;
@@ -32,4 +38,9 @@ body {
 
 #container h1 {
     font-size: 20px;
+}
+
+#post {
+    background: white;
+    padding: 1em;
 }
